--- a/faq.html
+++ b/faq.html
@@ -112,7 +112,7 @@
                     <svg class="w-6 h-6 text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
                 </div>
                 <div id="faq-answer-2" class="faq-answer">
-                    <p>Our standard premium mobile detail is typically $299, unless otherwise stated on our website or as part of a limited-time offer. For a limited time, you can call us now to unlock a special discount and get your full detail for just <strong>$199!</strong> This flat rate includes SUVs up to 3 rows, pet hair removal, and smoke odor removal. Please note: Vehicles with excessive dirt, grime, or mold may incur additional charges on top of the base detail, which will be discussed upfront.</p>
+                    <p>We have different packages listed on our main page at michieauto.com</p>
                 </div>
             </div>
 
