--- a/bnpl.html
+++ b/bnpl.html
@@ -65,6 +65,7 @@
             text-transform: uppercase;
             letter-spacing: 0.05em;
             box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+            text-decoration: none;
         }
         .btn-primary:hover {
             background-color: #1d4ed8;
@@ -108,9 +109,9 @@
             <!-- Step 2: Get Started -->
             <div class="text-center">
                  <h2 class="text-2xl font-bold text-white mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>Lock In Your Plan</h2>
-                 <p class="text-gray-400 mb-6">Ready to proceed? Contact us to finalize your financing and book your Level 3 Detail!</p>
-                 <a href="tel:+14052955189" class="btn-primary inline-block">
-                    Call to Get Started
+                 <p class="text-gray-400 mb-6">Ready to proceed? Fill out our secure booking form to lock in your financing and schedule your Level 3 Detail!</p>
+                 <a href="https://form.jotform.com/251615738814159" class="btn-primary inline-block">
+                    Book Your Detail Now
                  </a>
             </div>
 
