--- a/bnpl.html
+++ b/bnpl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Financing Calculator - Michie Auto Detailing</title>
+    <title>Pay in 3 payments - Michie Auto Detailing</title>
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -124,8 +124,8 @@
     <div class="relative z-10 w-full max-w-4xl mx-auto">
         <!-- Header -->
         <header class="text-center mb-8">
-            <h1 class="text-4xl md:text-5xl font-extrabold text-white tracking-tight">Level 3 Detail Financing</h1>
-            <p class="mt-3 text-lg text-gray-300 max-w-3xl mx-auto">Get our best package with 0% interest. Just 3 easy payments of $99.</p>
+            <h1 class="text-4xl md:text-5xl font-extrabold text-white tracking-tight">Level 2 Detail Financing</h1>
+            <p class="mt-3 text-lg text-gray-300 max-w-3xl mx-auto">For a limited time, get our most popular package with 0% interest. Just 3 easy payments of $99.</p>
         </header>
 
         <!-- Calculator Card -->
@@ -155,7 +155,7 @@
             <!-- Step 2: Get Started -->
             <div class="text-center">
                  <h2 class="text-2xl font-bold text-white mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>Lock In Your Plan</h2>
-                 <p class="text-gray-400 mb-6">Ready to proceed? Fill out our secure booking form to lock in your financing and schedule your Level 3 Detail!</p>
+                 <p class="text-gray-400 mb-6">Ready to detail? Fill out our secure booking form to lock in your financing and schedule your Level 3 Detail!</p>
                  <a href="https://form.jotform.com/251615738814159" class="btn-primary inline-block">
                     Book Your Detail Now
                  </a>
@@ -183,12 +183,11 @@
                     <li>Door jam cleaning</li>
                     <li>Rims and tires cleaned and wiped down</li>
                     <li>Console scrub down</li>
-                    <li>**Mold removal**</li>
-                    <li>FINE TOOTH COMB in-between seats</li>
+                    <li>Free bonus wash and vaccum 45 days after service</li>
+                    <li>Deep clean in-between seats</li>
                     <li>Glove compartment & trunk cleaning</li>
                     <li>Hard to reach areas deep shampoo</li>
                     <li>External bug removal</li>
-                    <li>Protection plan (15-day complimentary clean)</li>
                 </ul>
             </div>
         </div>
