--- a/index.html
+++ b/index.html
@@ -9,15 +9,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <!-- Google Ads Global Site Tag -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10782185640"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-10782185640');
+      
+      // Phone snippet for number replacement
       gtag('config', 'AW-10782185640/PPImCJ-a7eIaEKixrJUo', {
         'phone_conversion_number': '(405) 295-5189'
       });
+
+      // Function to report conversions on button clicks
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof(url) != 'undefined') {
+            window.location = url;
+          }
+        };
+        gtag('event', 'conversion', {
+            'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo',
+            'event_callback': callback
+        });
+        return false;
+      }
     </script>
 
     <style>
@@ -140,7 +157,7 @@
         </h1>
         <div class="text-right">
             <span class="text-sm font-semibold text-yellow-400 block">AVAILABLE 24/7</span>
-            <a href="tel:+14052955189" class="btn btn-secondary mt-1">
+            <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary mt-1">
                 <i class="fas fa-phone-alt mr-2"></i>
                 (405) 295-5189
             </a>
@@ -190,7 +207,7 @@
                             <li>Surface protectent for dash & controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                        <a href="tel:+14052955189" class="btn btn-secondary">Book Now</a>
+                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -205,7 +222,7 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -222,7 +239,7 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (15-day complimentary clean)</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
                     </div>
                 </div>
                 
@@ -242,7 +259,7 @@
                             <li>Surface protectent for dash & controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                        <a href="tel:+14052955189" class="btn btn-secondary">Book Now</a>
+                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -257,7 +274,7 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -274,7 +291,7 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (15-day complimentary clean)</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
                     </div>
                 </div>
             </div>
