--- a/index.html
+++ b/index.html
@@ -16,25 +16,10 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-10782185640');
-      
-      // Phone snippet for number replacement
+      // Phone Snippet for call conversion tracking
       gtag('config', 'AW-10782185640/PPImCJ-a7eIaEKixrJUo', {
         'phone_conversion_number': '(405) 295-5189'
       });
-
-      // Function to report conversions on button clicks
-      function gtag_report_conversion(url) {
-        var callback = function () {
-          if (typeof(url) != 'undefined') {
-            window.location = url;
-          }
-        };
-        gtag('event', 'conversion', {
-            'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo',
-            'event_callback': callback
-        });
-        return false;
-      }
     </script>
 
     <style>
@@ -157,7 +142,7 @@
         </h1>
         <div class="text-right">
             <span class="text-sm font-semibold text-yellow-400 block">AVAILABLE 24/7</span>
-            <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary mt-1">
+            <a href="tel:+14052955189" class="btn btn-secondary mt-1">
                 <i class="fas fa-phone-alt mr-2"></i>
                 (405) 295-5189
             </a>
@@ -207,7 +192,7 @@
                             <li>Surface protectent for dash & controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
+                        <a href="tel:+14052955189" class="btn btn-secondary">Book Now (405) 295-5189</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -222,7 +207,7 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now (405) 295-5189</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -239,7 +224,7 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (15-day complimentary clean)</li>
                         </ul>
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now (405) 295-5189</a>
                     </div>
                 </div>
                 
@@ -259,7 +244,7 @@
                             <li>Surface protectent for dash & controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
+                        <a href="tel:+14052955189" class="btn btn-secondary">Book Now (405) 295-5189</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -274,7 +259,7 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now (405) 295-5189</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -291,7 +276,7 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (15-day complimentary clean)</li>
                         </ul>
-                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Now</a>
+                         <a href="tel:+14052955189" class="btn btn-secondary">Book Now (405) 295-5189</a>
                     </div>
                 </div>
             </div>
