--- a/bnpl.html
+++ b/bnpl.html
@@ -12,6 +12,22 @@
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10782185640"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-10782185640');
+    </script>
+
+    <!-- Phone snippet for Website phone calls -->
+    <script>
+      gtag('config', 'AW-10782185640/PPImCJ-a7eIaEKixrJUo', {
+        'phone_conversion_number': '4052955189'
+      });
+    </script>
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -155,9 +171,9 @@
             <!-- Step 2: Get Started -->
             <div class="text-center">
                  <h2 class="text-2xl font-bold text-white mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>Lock In Your Plan</h2>
-                 <p class="text-gray-400 mb-6">Ready to detail? Fill out our secure booking form to lock in your financing and schedule your Level 2 Detail!</p>
-                 <a href="https://form.jotform.com/251615738814159" class="btn-primary inline-block">
-                    Book Your Detail Now
+                 <p class="text-gray-400 mb-6">Ready to detail? Call us now to lock in your financing and schedule your Level 2 Detail!</p>
+                 <a href="tel:4052955189" onclick="return gtag_report_conversion('tel:4052955189');" class="btn-primary inline-flex items-center">
+                    <i class="fas fa-phone-alt mr-3"></i> Call Now to Book
                  </a>
             </div>
         </div>
@@ -195,9 +211,9 @@
         <!-- Final CTA -->
         <div class="text-center">
              <h2 class="text-3xl font-bold text-white mb-4">Ready for a Showroom Finish?</h2>
-             <p class="text-gray-400 mb-6">Don't wait. Lock in your financing and schedule your appointment today!</p>
-             <a href="https://form.jotform.com/251615738814159" class="btn-primary inline-block text-lg">
-                Book Now
+             <p class="text-gray-400 mb-6">Don't wait. Call today to lock in your financing and schedule your appointment!</p>
+             <a href="tel:4052955189" onclick="return gtag_report_conversion('tel:4052955189');" class="btn-primary inline-flex items-center text-lg">
+                <i class="fas fa-phone-alt mr-3"></i> Call Now
              </a>
         </div>
 
@@ -208,6 +224,20 @@
     </div>
 
     <script>
+        // --- Call Tracking Reporting Function ---
+        function gtag_report_conversion(url) {
+          var callback = function () {
+            if (typeof(url) != 'undefined') {
+              window.location = url;
+            }
+          };
+          gtag('event', 'conversion', {
+              'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo',
+              'event_callback': callback
+          });
+          return false;
+        }
+
         document.addEventListener('DOMContentLoaded', () => {
             // --- CONFIGURATION ---
             const PAYMENT_AMOUNT = 99.00;
