--- a/bnpl.html
+++ b/bnpl.html
@@ -173,7 +173,7 @@
                  <h2 class="text-2xl font-bold text-white mb-4 flex items-center justify-center"><i class="fas fa-rocket text-blue-400 mr-3"></i>Lock In Your Plan</h2>
                  <p class="text-gray-400 mb-6">Ready to detail? Call us now to lock in your financing and schedule your Level 2 Detail!</p>
                  <a href="tel:4052955189" onclick="return gtag_report_conversion('tel:4052955189');" class="btn-primary inline-flex items-center">
-                    <i class="fas fa-phone-alt mr-3"></i> Call Now to Book
+                    <i class="fas fa-phone-alt mr-3"></i> Call 405-295-5189
                  </a>
             </div>
         </div>
@@ -213,7 +213,7 @@
              <h2 class="text-3xl font-bold text-white mb-4">Ready for a Showroom Finish?</h2>
              <p class="text-gray-400 mb-6">Don't wait. Call today to lock in your financing and schedule your appointment!</p>
              <a href="tel:4052955189" onclick="return gtag_report_conversion('tel:4052955189');" class="btn-primary inline-flex items-center text-lg">
-                <i class="fas fa-phone-alt mr-3"></i> Call Now
+                <i class="fas fa-phone-alt mr-3"></i> Call 405-295-5189
              </a>
         </div>
 
